add: new constraints to user entity